# Vortex-iMAGE

./: .gitignore  CODE_DOCUMENTATION.md  PERFORMANCE_OPTIMIZATION.md  README.md  create-icons.sh  dock-integration.js  dock-styles.css  dock-template.vue  index.html  package.json  playwright-ct.config.ts  pnpm-lock.yaml  push.sh  vite.config.ts  vitest.config.ts
.github/: IOS_BUILD_SETUP.md
.github/scripts/: patch_ios_project.py
.github/workflows/: android-desktop-build.yml  build-ios-unsigned.yml  build.yml  deploy.yml  ios-build-sparkfabrik.yml  ios-build.yml  ios-sideload-build.yml  ios-tauri-build.yml  pages.yml  release.yml
.kiro/specs/crypto-security-hardening/: design.md  requirements.md  tasks.md
.kiro/specs/photo-manager-enhancement/: design.md  requirements.md  tasks.md
LOGS/: 1_build-ios.txt
LOGS/build-ios/: 10_Cache Rust.txt  11_Install frontend dependencies.txt  12_Build frontend.txt  13_Initialize iOS project.txt  14_Find Xcode project info.txt  16_Disable code signing in Xcode project.txt  17_Build Rust library for iOS.txt  18_Build iOS (Debug - Simulator).txt  1_Set up job.txt  21_Find build artifacts.txt  22_Set outputs.txt  23_Upload build artifacts.txt  25_Cleanup keychain.txt  2_Checkout repository.txt  3_Setup build environment.txt  46_Post Cache Rust.txt  47_Post Cache pnpm dependencies.txt  48_Post Setup pnpm.txt  49_Post Setup Node.js.txt  4_Select Xcode version.txt  50_Post Checkout repository.txt  51_Complete job.txt  5_Setup Node.js.txt  6_Setup pnpm.txt  7_Get pnpm store directory.txt  8_Cache pnpm dependencies.txt  9_Setup Rust.txt  system.txt
conductor/: product-guidelines.md  product.md  tech-stack.md
exemple-alghos/: build.ps1  style.css
exemple-alghos/capabilities/: mod.rs  network.rs
exemple-alghos/channel/: mod.rs
exemple-alghos/chat/: enhanced.rs  queue.rs
exemple-alghos/community/: mod.rs
exemple-alghos/components/: ColorTagPanel.vue  FolderUploadDialog.vue  PhotoGallery.vue  PhotoUploader.vue  RepoCreator.vue  SpaceLoader.vue  SyncStatusIndicator.vue
exemple-alghos/composables/: useGitHubAuth.ts  useImageMetadata.ts  useRepoManager.ts  useUploadToast.ts
exemple-alghos/composables/__tests__/: uploadProgress.spec.ts  useColorTags.spec.ts  useFavorites.spec.ts  usePhotoPreviewSize.spec.ts  useRepoManager.spec.ts  useSelection.spec.ts
exemple-alghos/compress/: entropy.rs  vortex_codec.rs
exemple-alghos/contact/: mod.rs
exemple-alghos/crdt/: mod.rs
exemple-alghos/crypto/: enhanced.rs  mod.rs  privacy.rs
exemple-alghos/drive/: mod.rs
exemple-alghos/messaging/: mod.rs
exemple-alghos/net/: device_link.rs  gossip.rs  mod.rs  relay.rs  relay_client.rs
exemple-alghos/storage/: mod.rs
exemple-alghos/sync/: mod.rs
exemples/exemple-alghos/: App.vue  app.rs  cache.rs  causal.rs  claude-tauri-prompt.md  clock.rs  lib.rs  mobile.css
exemples/exemple-alghos/capabilities/: fs.rs
exemples/exemple-alghos/chat/: mod.rs
exemples/exemple-alghos/components/: AccentPicker.vue  AlbumTree.vue  AuthButton.vue  DataDriverManager.vue  LocalImageBrowser.vue  MobileNav.vue  PhotoPreview.vue  PrivacySettings.vue  ThemeSettings.vue  UploadToast.vue
exemples/exemple-alghos/composables/: useColorTags.ts  useDataDriver.ts  useFavorites.ts  usePhotoPreviewSize.ts  usePhotoUpload.ts  useSelection.ts  useSyncStatus.ts  useTheme.ts
exemples/exemple-alghos/compress/: mod.rs
exemples/exemple-alghos/meetings/: mod.rs
exemples/exemple-alghos/net/: connection.rs  iroh_node.rs  messenger.rs  tor_transport.rs
landing/: app.js  index.html  styles.css
playwright/: index.html  index.ts
playwright-report/: index.html
playwright/.cache/: index.html  metainfo.json
scripts/: android-release-build.sh  android-setup.sh  create-avd.sh  quick-android-build.sh
src/: App.vue  App.vue.bak  build-simple.sh  build.sh  main.ts  mobile.css  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: compress.rs  crypto.rs  crypto.rs.bak  github.rs  lib.rs  main.rs  pipeline.rs  security_verify.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/compress/: algorithm_tests.rs  file_tests.rs  mod.rs  roundtrip_tests.rs
src-tauri/src/tests/crypto/: encryption_tests.rs  keypair_tests.rs  mod.rs  property_tests.rs  signature_tests.rs  token_tests.rs
src-tauri/src/tests/integration/: mod.rs  security_pipeline_tests.rs
src/components/: AccentPicker.vue  AlbumTree.vue  AmbientBackground.vue  AsyncState.vue  AuthButton.vue  BackupSettings.vue  BrowserFilePicker.vue  CircularGallery.vue  ColorTagPanel.vue  ContextColorMenu.vue  ContextMenu.vue  DataDriverManager.vue  ErrorBoundary.vue  FloatingTagPanel.vue  FolderCreator.vue  FolderUploadDialog.vue  GlassSurface.vue  GlitchText.vue  GlowButton.vue  HaloSearch.vue  HoverCard.vue  LocalImageBrowser.vue  MacOSDock.vue  Masonry.vue  MediaSettingsPanel.vue  MobileNav.vue  PhotoCard.vue  PhotoDetail.vue  PhotoEditor.vue  PhotoGallery.vue  PhotoPreview.vue  PhotoUploader.vue  PipelineEditor.vue  PixelLoader.vue  PrettyText.vue  PrivacySettings.vue  RainbowButton.vue  RepoCreator.vue  SecureImage.vue  SecuritySettings.vue  (+10 more)
src/composables/: useAccentColor.ts  useBackupSettings.ts  useColorTags.ts  useCompression.ts  useCrypto.ts  useDataDriver.ts  useDockApps.ts  useErrorBoundary.ts  useFavorites.ts  useFolder.ts  useGitHubAuth.ts  useImageMetadata.ts  useKeyboardShortcuts.ts  useMediaSettings.ts  useMobileSearch.ts  useNavigation.ts  usePhotoActions.ts  usePhotoPreviewSize.ts  usePhotoUpload.ts  usePipeline.ts  usePlatform.ts  useRepoManager.ts  useSelection.ts  useSmartAlbums.ts  useSyncStatus.ts  useTags.ts  useTheme.ts  useTimeout.ts  useToast.ts  useUploadToast.ts
src/config/: constants.ts  css-vars.ts  index.ts
src/lib/: colorTags.ts  utils.ts
src/types/: photo.ts
test-results/: .last-run.json
tests/: AuthButton.spec.ts  PhotoGallery.spec.ts
tests/components/: Masonry.spec.ts  PhotoEditor.spec.ts
tests/mocks/: useAccentColor.ts  useGitHubAuth.ts  usePhotoUpload.ts
(+96 files in other folders)
