[package]
name = "vortex-image"
version = "0.1.0"
description = "iMAGE - Vortex Interface"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vortex_image_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Post-quantum crypto using pqcrypto (C bindings with assembly)
# ONLY enable for Android/Desktop builds - NOT iOS (sha3 assembly fails on iOS ARM)
# Usage: cargo build --features pqcrypto-backend
pqcrypto-backend = ["pqcrypto-mlkem", "pqcrypto-dilithium", "pqcrypto-traits"]

# Alias for backwards compatibility
desktop_pqcrypto = ["pqcrypto-backend"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
base64 = "0.21"
sha2 = "0.10"
thiserror = "1"
futures = "0.3"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Compression algorithms
zstd = "0.13"
lz4_flex = "0.11"
snap = "1"
brotli = "7"
flate2 = "1"

# Post-quantum cryptography (optional - C bindings, not compatible with iOS ARM)
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# Pure-Rust Post-quantum cryptography (works on ALL platforms including iOS)
# These crates are 100% Rust with no assembly - iOS ARM compatible
pqc_kyber = { version = "0.7", default-features = false, features = ["kyber1024"] }
pqc_dilithium = { version = "0.2", default-features = false, features = ["mode3"] }

# Classical cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
argon2 = "0.5"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
hex = "0.4"

# Desktop dependencies (native TLS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }

# Mobile dependencies (rustls for cross-compilation)
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }

# NOTE: pqcrypto is NOT included in target-specific deps because Cargo evaluates
# cfg() based on HOST, not TARGET during cross-compilation. Instead, we use
# conditional compilation (#[cfg(...)]) in the source code and the optional
# feature flag. For iOS builds, pqcrypto is completely excluded via feature flags.
#
# BUILD INSTRUCTIONS:
# - iOS:           cargo build --target aarch64-apple-ios (NO features - uses pure Rust)
# - Android:       cargo build --target aarch64-linux-android --features pqcrypto-backend
# - Desktop Linux: cargo build --features pqcrypto-backend
# - Desktop macOS: cargo build --features pqcrypto-backend
# - Desktop Win:   cargo build --features pqcrypto-backend

